--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="plan grid-center">
           <img src="/images/icon-music.svg" alt="">
           <p class="plan-name">Annual Plan</p>
-          <button class="cta-2"><a href="">Change</a></button>
+          <a href="">Change</a>
           <p class="price">$59.99/year</p>
         </div>
         <buttton class="cta-1">Proceed to Payment</buttton>
